--- a/main.css
+++ b/main.css
@@ -13,18 +13,17 @@ body {
 .main-container {
     display: flex;
     justify-content: center;
-    gap: 15px;
     flex-wrap: wrap-reverse;
-    margin: 20px 50px;
     background-color: #2f0e07;
     max-width: 1000px;
     margin: auto;
 }
   
 .left-container {
-    width: 700px;
+    max-width: 700px;
     display: flex;
     flex-direction: column;
+    padding: 0 10px;
 }
 
 .skill-list {
@@ -47,7 +46,7 @@ body {
 
 .skill-item .proficiency {
     background-color: #a5a58d;
-    width: 500px;
+    min-width: 300px;
     flex-grow: 1;
 }
   
@@ -75,7 +74,6 @@ body {
     padding: 0 20px;
     display: flex;
     flex-direction: column;
-    justify-content: flext-start;
     gap: 20px;
     margin: auto; /* trick to center contents of a div */
 }
