Fixed flex-grow issue for right column container

--- a/main.css
+++ b/main.css
@@ -23,7 +23,7 @@ body {
     max-width: 700px;
     display: flex;
     flex-direction: column;
-    padding: 0 10px;
+    padding: 0 20px;
 }
 
 .skill-list {
@@ -54,6 +54,8 @@ body {
 .right-container {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    background-color: #4a2419;
 }
   
 .hero-section {
@@ -67,25 +69,16 @@ body {
     width: 130px;
     border-radius: 65px;
 }
-  
-.lower-right-container {
-    background-color: #4a2419;
-    color: #a5a58d;
-    padding: 0 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 20px;
-    margin: auto; /* trick to center contents of a div */
-}
 
-.contact-section {
+.contact-section {    
     display: flex;
     flex-direction: column;
     gap: 10px;
+    padding: 0 20px;
     margin-bottom: 20px;
 }
 
-.contact {
+.contact-link {
     text-decoration: none;
     color: #a5a58d;
 }
