Added some more skills; displayed two skills in a row on larger devices; added icons for contact links

--- a/main.css
+++ b/main.css
@@ -23,12 +23,12 @@ body {
     max-width: 700px;
     display: flex;
     flex-direction: column;
-    padding: 0 20px;
+    padding: 0 20px 20px; /*top horizontal bottom*/
 }
 
 .skill-list {
     display: flex;
-    flex-direction: column;
+    flex-wrap: wrap;
     gap: 12px;
 }
 
@@ -46,8 +46,8 @@ body {
 
 .skill-item .proficiency {
     background-color: #a5a58d;
-    min-width: 300px;
     flex-grow: 1;
+    min-width: 200px;
 }
   
 /* Right container styles starts from here */
@@ -61,7 +61,6 @@ body {
 .hero-section {
     text-align: center;
     background-color: #653a2a;
-    color: #a5a58d;
 }
   
 .profile-image {
