--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
     justify-content: center;
     flex-wrap: wrap-reverse;
     background-color: #2f0e07;
-    max-width: 1000px;
+    max-width: 1040px;
     margin: auto;
     box-shadow: -1px -1px 1rem rgba(233, 225, 225, 0.175);
 }
@@ -142,15 +142,39 @@ dd {
     border-radius: 65px;
 }
 
-.contact-section {    
+.contact-section, .education-section {    
     display: flex;
     flex-direction: column;
     gap: 10px;
-    padding: 0 20px;
+    padding: 0 15px;
     margin-bottom: 20px;
 }
 
 .contact-link {
     text-decoration: none;
     color: #a5a58d;
+}
+
+.education-list {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.education-item {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.degree {
+    margin: 0;
+}
+
+.college, .university, .duration {
+    margin: 0;
+    font-weight: lighter;
 }
